# lou

./: README.md  참고서적정보.txt
ch01/2.optionTest/: 07.option-Wall.c
ch02/02.make_gen/: Makefile  make02  make03  make04  make05  make06  make07  make08  make09  make10  make11
ch03/2.libTest2_make/appSrc/: Makefile
ch03/2.libTest2_make/libStatic/: Makefile
ch04/1.basic/cmake/: CMakeLists.txt
ch04/2.var_cmd/1.var_st/cmake/: CMakeLists.txt
ch04/2.var_cmd/2.var_prj_st/cmake/: 01.cmake_minimum_required.txt  02.cmake_project_name.txt  03.cmake_build_type.txt  04.cmake_verbose_makefile.txt
ch04/2.var_cmd/3.vat_trg_add_exe_st/cmake/: CMakeLists.txt
ch04/2.var_cmd/4.var_trg_add_lib_st/cmake/libs/: CMakeLists.txt
ch04/2.var_cmd/6.install_exe_st/: CMakeLists.txt
ch04/2.var_cmd/8.build_option_st/cmake/: CMakeLists.txt
ch05/cmake_app_st/01.app_lib_st/cmake/: CMakeLists.txt
ch05/cmake_app_st/02.app_extlib_link_st/cmake/: CMakeLists.txt
ch05/cmake_app_st/03.add_custom_target_st/cmake/: CMakeLists.txt
ch05/cmake_app_st/04.add_dependencies_st/cmake/: .t1.txt.swp  CMakeLists.txt
ch05/cmake_app_st/05.app_lib_install_st/cmake/: CMakeLists.txt
ch05/cmake_app_st/06.cflags_ldflags_st/cmake/: CMakeLists.txt
